<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Editar_Perfil"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#02689F"
        android:elevation="4dp"
        app:title="Editar perfil"

        app:titleTextColor="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/layout_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10sp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10sp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#02689F"

                android:gravity="center"
                android:padding="5sp"
                android:text="@string/actualizar_perfil"
                android:textColor="@color/white"
                android:fontFamily="@font/titulos"
                android:textSize="30sp"/>


            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_marginTop="15sp"
                android:ems="15"
                android:hint="@string/Usuario"

                android:textColor="#0c30ff"
                android:textColorHint="#0c30ff"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPersonName"
                    android:textColor="#0c30ff"
                    android:textColorHint="#0c30ff" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="User"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:hintAnimationEnabled="true"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"/>

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/tlUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_marginTop="15sp"
                android:ems="15"
                android:hint="@string/correo"
                android:textColor="#0511F2"
                android:textColorHint="#0511F2"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textEmailAddress"
                    android:textColor="#0511F2"
                    android:textColorHint="#0511F2" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:text="correo"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:hintAnimationEnabled="true"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>

