<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00000000">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#02689F"
            app:layout_constraintEnd_toStartOf="@id/bottom_and_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white"
            app:title="Perfil"
            >
        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/bottom_and_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            app:cardCornerRadius="22.5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"

            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/upload_content"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/baseline_upload_24"
                android:outlineProvider="background"
                android:clipToOutline="true"
                tools:ignore="ContentDescription,UnusedAttribute" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:layout_gravity="center" >


            <!--Parte de arriba-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/logotransport"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#FF000000"
                    android:layout_gravity="center"
                    tools:ignore="MissingClass"
                    />


                <Button
                    android:id="@+id/editarPerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="editar perfil"
                    android:fontFamily="@font/titulos"
                    android:layout_gravity="center"
                    android:backgroundTint="#0D6EFD"
                    />



                <Button
                    android:id="@+id/eliminarCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="eliminar cuenta"
                    android:fontFamily="@font/titulos"
                    android:layout_gravity="center"
                    android:backgroundTint="#DD3445"
                    />

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                </androidx.coordinatorlayout.widget.CoordinatorLayout>



            </LinearLayout>

            <!--descripcion-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >

                <androidx.cardview.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view1"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="10dp">
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <!--Uruario-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="7dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Usuario"
                    android:fontFamily="@font/titulos"
                    android:layout_margin="15dp"
                    />

                <androidx.cardview.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >

                    <TextView
                        android:id="@+id/Usuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_prueba"
                        android:layout_gravity="center"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="textEmailAddress"
                        android:autofillHints=""
                        tools:ignore="LabelFor" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <!--Correo-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="11dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Correo"
                    android:fontFamily="@font/titulos"
                    android:layout_margin="15dp"
                    />


                <androidx.cardview.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view3"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/correo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correo_prueba"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:gravity="center"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="textEmailAddress"
                        android:autofillHints=""
                        tools:ignore="LabelFor" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
